package es.kiwi.structural.bridge.example4;

/**
 * 以手机的方式发送普通消息
 */
public class CommonMessageMobile implements Message {

    public void send(String message, String toUser) {

    }

}