package es.kiwi.structural.bridge.example4;

public class SpecialUrgentMessageSMS implements SpecialUrgentMessage {

	public void hurry(String messageId) {
		// TODO Auto-generated method stub
		
	}

	public void send(String message, String toUser) {
		// TODO Auto-generated method stub
		
	}

}